// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordPage can render 1`] = `
<div>
  <div
    class="pf-c-background-image"
    style="--pf-c-background-image--BackgroundImage: url(/background.png); --pf-c-background-image--BackgroundImage-2x: url(/background.png); --pf-c-background-image--BackgroundImage--sm: url(/background.png); --pf-c-background-image--BackgroundImage--sm-2x: url(/background.png); --pf-c-background-image--BackgroundImage--lg: url(/background.png); --pf-c-background-image--Filter: url(#patternfly-background-image-filter-overlay0);"
  >
    <svg
      class="pf-c-background-image__filter"
      height="0"
      width="0"
      xmlns="http://www.w3.org/2000/svg"
    >
      <filter
        id="patternfly-background-image-filter-overlay0"
      >
        <fecolormatrix
          type="matrix"
          values="1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 1 0"
        />
        <fecomponenttransfer
          color-interpolation-filters="sRGB"
          result="duotone"
        >
          <fefuncr
            tableValues="0.086274509803922 0.43921568627451"
            type="table"
          />
          <fefuncg
            tableValues="0.086274509803922 0.43921568627451"
            type="table"
          />
          <fefuncb
            tableValues="0.086274509803922 0.43921568627451"
            type="table"
          />
          <fefunca
            tableValues="0 1"
            type="table"
          />
        </fecomponenttransfer>
      </filter>
    </svg>
  </div>
  <header
    class="pf-c-page__header page-header"
  >
    <div
      class="pf-c-page__header-brand"
    >
      <a
        class="pf-c-page__header-brand-link"
      >
        <img
          alt="Logo"
          src="RedHatLogo.svg"
        />
      </a>
    </div>
    <div
      class="pf-c-page__header-nav"
    >
      <div
        class="page-header-middle"
      >
        Edge cluster setup
      </div>
    </div>
    <div
      class="pf-c-page__header-tools"
    >
      <a
        aria-disabled="false"
        class="pf-c-button pf-m-tertiary"
        data-ouia-component-id="OUIA-Generated-Button-tertiary-1"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
      >
        Log out
      </a>
    </div>
  </header>
  <div
    class="page-container"
  >
    <div
      class="page-content"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item content-three-rows__top"
        >
          <ol
            class="pf-c-progress-stepper pf-m-center wizard-progress"
          >
            <li
              aria-label="Username step"
              class="pf-c-progress-stepper__step pf-m-success"
              id="username"
            >
              <div
                class="pf-c-progress-stepper__step-connector"
              >
                <span
                  class="pf-c-progress-stepper__step-icon"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="pf-c-progress-stepper__step-main"
              >
                <div
                  aria-labelledby="username username-title"
                  class="pf-c-progress-stepper__step-title"
                  id="username-title"
                >
                  Username
                </div>
              </div>
            </li>
            <li
              aria-label="Password step"
              class="pf-c-progress-stepper__step pf-m-info pf-m-current"
              id="password"
            >
              <div
                class="pf-c-progress-stepper__step-connector"
              >
                <span
                  class="pf-c-progress-stepper__step-icon"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M512.1,0 C229.7,0 0,229.8 0,512 C0,794.3 229.8,1024 512.1,1024 C794.4,1024 1024,794.3 1024,512 C1024,229.7 794.4,0 512.1,0 Z M512,896 C300.2,896 128,723.9 128,512 C128,300.3 300.2,128 512,128 C723.7,128 896,300.2 896,512 C896,723.8 723.7,896 512,896 Z M512,224 C671.1,224 800,352.9 800,512 C800,671.1 671.1,800 512,800 C352.9,800 224,671.1 224,512 C224,352.9 352.9,224 512,224"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="pf-c-progress-stepper__step-main"
              >
                <div
                  aria-labelledby="password password-title"
                  class="pf-c-progress-stepper__step-title"
                  id="password-title"
                >
                  Password
                </div>
              </div>
            </li>
            <li
              aria-label="API step"
              class="pf-c-progress-stepper__step pf-m-pending"
              id="apiaddr"
            >
              <div
                class="pf-c-progress-stepper__step-connector"
              >
                <span
                  class="pf-c-progress-stepper__step-icon"
                />
              </div>
              <div
                class="pf-c-progress-stepper__step-main"
              >
                <div
                  aria-labelledby="apiaddr apiaddr-title"
                  class="pf-c-progress-stepper__step-title"
                  id="apiaddr-title"
                >
                  API
                </div>
              </div>
            </li>
            <li
              aria-label="Ingress step"
              class="pf-c-progress-stepper__step pf-m-pending"
              id="ingressip"
            >
              <div
                class="pf-c-progress-stepper__step-connector"
              >
                <span
                  class="pf-c-progress-stepper__step-icon"
                />
              </div>
              <div
                class="pf-c-progress-stepper__step-main"
              >
                <div
                  aria-labelledby="ingressip ingressip-title"
                  class="pf-c-progress-stepper__step-title"
                  id="ingressip-title"
                >
                  Ingress
                </div>
              </div>
            </li>
            <li
              aria-label="Domain step"
              class="pf-c-progress-stepper__step pf-m-pending"
              id="domain"
            >
              <div
                class="pf-c-progress-stepper__step-connector"
              >
                <span
                  class="pf-c-progress-stepper__step-icon"
                />
              </div>
              <div
                class="pf-c-progress-stepper__step-main"
              >
                <div
                  aria-labelledby="domain domain-title"
                  class="pf-c-progress-stepper__step-title"
                  id="domain-title"
                >
                  Domain
                </div>
              </div>
            </li>
            <li
              aria-label="Download SSH key step"
              class="pf-c-progress-stepper__step pf-m-pending"
              id="sshkey"
            >
              <div
                class="pf-c-progress-stepper__step-connector"
              >
                <span
                  class="pf-c-progress-stepper__step-icon"
                />
              </div>
              <div
                class="pf-c-progress-stepper__step-main"
              >
                <div
                  aria-labelledby="sshkey sshkey-title"
                  class="pf-c-progress-stepper__step-title"
                  id="sshkey-title"
                >
                  SSH
                </div>
              </div>
            </li>
          </ol>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill content-three-rows__middle"
        >
          <div
            class="pf-l-stack pf-m-gutter wizard-content"
          >
            <div
              class="pf-l-stack__item"
            >
              <h1
                class="pf-c-title pf-m-2xl"
                data-ouia-component-id="OUIA-Generated-Title-1"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe="true"
              >
                Choose a password 
                <span
                  class="required-badge"
                >
                  *
                </span>
              </h1>
            </div>
            <div
              class="pf-l-stack__item wizard-sublabel"
            >
              Keep your edge cluster account safe and secure.
            </div>
            <div
              class="pf-l-stack__item"
            >
              <div
                class="pf-c-form__group"
              >
                <div
                  class="pf-c-form__group-control"
                >
                  <input
                    aria-invalid="false"
                    class="pf-c-form-control password-item"
                    data-ouia-component-id="OUIA-Generated-TextInputBase-1"
                    data-ouia-component-type="PF4/TextInput"
                    data-ouia-safe="true"
                    data-testid="input-password"
                    id="input-password"
                    type="password"
                    value=""
                  />
                  <button
                    aria-disabled="false"
                    aria-label="Show password"
                    class="pf-c-button pf-m-control"
                    data-ouia-component-id="OUIA-Generated-Button-control-1"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 640 512"
                      width="1em"
                    >
                      <path
                        d="M320 400c-75.85 0-137.25-58.71-142.9-133.11L72.2 185.82c-13.79 17.3-26.48 35.59-36.72 55.59a32.35 32.35 0 0 0 0 29.19C89.71 376.41 197.07 448 320 448c26.91 0 52.87-4 77.89-10.46L346 397.39a144.13 144.13 0 0 1-26 2.61zm313.82 58.1l-110.55-85.44a331.25 331.25 0 0 0 81.25-102.07 32.35 32.35 0 0 0 0-29.19C550.29 135.59 442.93 64 320 64a308.15 308.15 0 0 0-147.32 37.7L45.46 3.37A16 16 0 0 0 23 6.18L3.37 31.45A16 16 0 0 0 6.18 53.9l588.36 454.73a16 16 0 0 0 22.46-2.81l19.64-25.27a16 16 0 0 0-2.82-22.45zm-183.72-142l-39.3-30.38A94.75 94.75 0 0 0 416 256a94.76 94.76 0 0 0-121.31-92.21A47.65 47.65 0 0 1 304 192a46.64 46.64 0 0 1-1.54 10l-73.61-56.89A142.31 142.31 0 0 1 320 112a143.92 143.92 0 0 1 144 144c0 21.63-5.29 41.79-13.9 60.11z"
                      />
                    </svg>
                  </button>
                  <ul>
                    <li>
                      <svg
                        aria-hidden="true"
                        data-testid="requirement-length-failed"
                        fill="#c9190b"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 512 512"
                        width="1em"
                      >
                        <path
                          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                        />
                      </svg>
                      <span
                        class="password-requirement-text"
                      >
                        8 characters minimum
                      </span>
                    </li>
                    <li
                      class="pf-c-helper-text__item pf-m-dynamic pf-m-error"
                    >
                      <svg
                        aria-hidden="true"
                        data-testid="requirement-uppercase-failed"
                        fill="#c9190b"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 512 512"
                        width="1em"
                      >
                        <path
                          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                        />
                      </svg>
                      <span
                        class="password-requirement-text"
                      >
                        One uppercase character
                      </span>
                    </li>
                  </ul>
                  
                </div>
              </div>
            </div>
            <div
              class="pf-l-stack__item pasword-sublabel-item"
            >
              <h4
                class="pf-c-title pf-m-md"
                data-ouia-component-id="OUIA-Generated-Title-2"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe="true"
              >
                Confirm password
              </h4>
            </div>
            <div
              class="pf-l-stack__item pf-m-fill"
            >
              <div
                class="pf-c-form__group"
              >
                <div
                  class="pf-c-form__group-control"
                >
                  <input
                    aria-invalid="false"
                    class="pf-c-form-control password-item"
                    data-ouia-component-id="OUIA-Generated-TextInputBase-2"
                    data-ouia-component-type="PF4/TextInput"
                    data-ouia-safe="true"
                    data-testid="input-password-check"
                    id="input-password-check"
                    type="password"
                    value=""
                  />
                  <button
                    aria-disabled="false"
                    aria-label="Show password"
                    class="pf-c-button pf-m-control"
                    data-ouia-component-id="OUIA-Generated-Button-control-2"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 640 512"
                      width="1em"
                    >
                      <path
                        d="M320 400c-75.85 0-137.25-58.71-142.9-133.11L72.2 185.82c-13.79 17.3-26.48 35.59-36.72 55.59a32.35 32.35 0 0 0 0 29.19C89.71 376.41 197.07 448 320 448c26.91 0 52.87-4 77.89-10.46L346 397.39a144.13 144.13 0 0 1-26 2.61zm313.82 58.1l-110.55-85.44a331.25 331.25 0 0 0 81.25-102.07 32.35 32.35 0 0 0 0-29.19C550.29 135.59 442.93 64 320 64a308.15 308.15 0 0 0-147.32 37.7L45.46 3.37A16 16 0 0 0 23 6.18L3.37 31.45A16 16 0 0 0 6.18 53.9l588.36 454.73a16 16 0 0 0 22.46-2.81l19.64-25.27a16 16 0 0 0-2.82-22.45zm-183.72-142l-39.3-30.38A94.75 94.75 0 0 0 416 256a94.76 94.76 0 0 0-121.31-92.21A47.65 47.65 0 0 1 304 192a46.64 46.64 0 0 1-1.54 10l-73.61-56.89A142.31 142.31 0 0 1 320 112a143.92 143.92 0 0 1 144 144c0 21.63-5.29 41.79-13.9 60.11z"
                      />
                    </svg>
                  </button>
                  
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="pf-l-stack__item content-three-rows__bottom"
        >
          <div
            class="wizard-footer"
          >
            <button
              aria-disabled="false"
              class="pf-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-1"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              data-testid="wizard-footer-button-back"
              type="button"
            >
              Go back
            </button>
            <button
              aria-disabled="true"
              class="pf-c-button pf-m-primary pf-m-disabled"
              data-ouia-component-id="OUIA-Generated-Button-primary-1"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              data-testid="wizard-footer-button-next"
              disabled=""
              type="button"
            >
              Continue
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PasswordPage can validate 8 small letters password 1`] = `
<div>
  <div
    class="pf-c-background-image"
    style="--pf-c-background-image--BackgroundImage: url(/background.png); --pf-c-background-image--BackgroundImage-2x: url(/background.png); --pf-c-background-image--BackgroundImage--sm: url(/background.png); --pf-c-background-image--BackgroundImage--sm-2x: url(/background.png); --pf-c-background-image--BackgroundImage--lg: url(/background.png); --pf-c-background-image--Filter: url(#patternfly-background-image-filter-overlay1);"
  >
    <svg
      class="pf-c-background-image__filter"
      height="0"
      width="0"
      xmlns="http://www.w3.org/2000/svg"
    >
      <filter
        id="patternfly-background-image-filter-overlay1"
      >
        <fecolormatrix
          type="matrix"
          values="1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 1 0"
        />
        <fecomponenttransfer
          color-interpolation-filters="sRGB"
          result="duotone"
        >
          <fefuncr
            tableValues="0.086274509803922 0.43921568627451"
            type="table"
          />
          <fefuncg
            tableValues="0.086274509803922 0.43921568627451"
            type="table"
          />
          <fefuncb
            tableValues="0.086274509803922 0.43921568627451"
            type="table"
          />
          <fefunca
            tableValues="0 1"
            type="table"
          />
        </fecomponenttransfer>
      </filter>
    </svg>
  </div>
  <header
    class="pf-c-page__header page-header"
  >
    <div
      class="pf-c-page__header-brand"
    >
      <a
        class="pf-c-page__header-brand-link"
      >
        <img
          alt="Logo"
          src="RedHatLogo.svg"
        />
      </a>
    </div>
    <div
      class="pf-c-page__header-nav"
    >
      <div
        class="page-header-middle"
      >
        Edge cluster setup
      </div>
    </div>
    <div
      class="pf-c-page__header-tools"
    >
      <a
        aria-disabled="false"
        class="pf-c-button pf-m-tertiary"
        data-ouia-component-id="OUIA-Generated-Button-tertiary-2"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
      >
        Log out
      </a>
    </div>
  </header>
  <div
    class="page-container"
  >
    <div
      class="page-content"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item content-three-rows__top"
        >
          <ol
            class="pf-c-progress-stepper pf-m-center wizard-progress"
          >
            <li
              aria-label="Username step"
              class="pf-c-progress-stepper__step pf-m-success"
              id="username"
            >
              <div
                class="pf-c-progress-stepper__step-connector"
              >
                <span
                  class="pf-c-progress-stepper__step-icon"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="pf-c-progress-stepper__step-main"
              >
                <div
                  aria-labelledby="username username-title"
                  class="pf-c-progress-stepper__step-title"
                  id="username-title"
                >
                  Username
                </div>
              </div>
            </li>
            <li
              aria-label="Password step"
              class="pf-c-progress-stepper__step pf-m-info pf-m-current"
              id="password"
            >
              <div
                class="pf-c-progress-stepper__step-connector"
              >
                <span
                  class="pf-c-progress-stepper__step-icon"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M512.1,0 C229.7,0 0,229.8 0,512 C0,794.3 229.8,1024 512.1,1024 C794.4,1024 1024,794.3 1024,512 C1024,229.7 794.4,0 512.1,0 Z M512,896 C300.2,896 128,723.9 128,512 C128,300.3 300.2,128 512,128 C723.7,128 896,300.2 896,512 C896,723.8 723.7,896 512,896 Z M512,224 C671.1,224 800,352.9 800,512 C800,671.1 671.1,800 512,800 C352.9,800 224,671.1 224,512 C224,352.9 352.9,224 512,224"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="pf-c-progress-stepper__step-main"
              >
                <div
                  aria-labelledby="password password-title"
                  class="pf-c-progress-stepper__step-title"
                  id="password-title"
                >
                  Password
                </div>
              </div>
            </li>
            <li
              aria-label="API step"
              class="pf-c-progress-stepper__step pf-m-pending"
              id="apiaddr"
            >
              <div
                class="pf-c-progress-stepper__step-connector"
              >
                <span
                  class="pf-c-progress-stepper__step-icon"
                />
              </div>
              <div
                class="pf-c-progress-stepper__step-main"
              >
                <div
                  aria-labelledby="apiaddr apiaddr-title"
                  class="pf-c-progress-stepper__step-title"
                  id="apiaddr-title"
                >
                  API
                </div>
              </div>
            </li>
            <li
              aria-label="Ingress step"
              class="pf-c-progress-stepper__step pf-m-pending"
              id="ingressip"
            >
              <div
                class="pf-c-progress-stepper__step-connector"
              >
                <span
                  class="pf-c-progress-stepper__step-icon"
                />
              </div>
              <div
                class="pf-c-progress-stepper__step-main"
              >
                <div
                  aria-labelledby="ingressip ingressip-title"
                  class="pf-c-progress-stepper__step-title"
                  id="ingressip-title"
                >
                  Ingress
                </div>
              </div>
            </li>
            <li
              aria-label="Domain step"
              class="pf-c-progress-stepper__step pf-m-pending"
              id="domain"
            >
              <div
                class="pf-c-progress-stepper__step-connector"
              >
                <span
                  class="pf-c-progress-stepper__step-icon"
                />
              </div>
              <div
                class="pf-c-progress-stepper__step-main"
              >
                <div
                  aria-labelledby="domain domain-title"
                  class="pf-c-progress-stepper__step-title"
                  id="domain-title"
                >
                  Domain
                </div>
              </div>
            </li>
            <li
              aria-label="Download SSH key step"
              class="pf-c-progress-stepper__step pf-m-pending"
              id="sshkey"
            >
              <div
                class="pf-c-progress-stepper__step-connector"
              >
                <span
                  class="pf-c-progress-stepper__step-icon"
                />
              </div>
              <div
                class="pf-c-progress-stepper__step-main"
              >
                <div
                  aria-labelledby="sshkey sshkey-title"
                  class="pf-c-progress-stepper__step-title"
                  id="sshkey-title"
                >
                  SSH
                </div>
              </div>
            </li>
          </ol>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill content-three-rows__middle"
        >
          <div
            class="pf-l-stack pf-m-gutter wizard-content"
          >
            <div
              class="pf-l-stack__item"
            >
              <h1
                class="pf-c-title pf-m-2xl"
                data-ouia-component-id="OUIA-Generated-Title-3"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe="true"
              >
                Choose a password 
                <span
                  class="required-badge"
                >
                  *
                </span>
              </h1>
            </div>
            <div
              class="pf-l-stack__item wizard-sublabel"
            >
              Keep your edge cluster account safe and secure.
            </div>
            <div
              class="pf-l-stack__item"
            >
              <div
                class="pf-c-form__group"
              >
                <div
                  class="pf-c-form__group-control"
                >
                  <input
                    aria-invalid="true"
                    class="pf-c-form-control password-item"
                    data-ouia-component-id="OUIA-Generated-TextInputBase-3"
                    data-ouia-component-type="PF4/TextInput"
                    data-ouia-safe="true"
                    data-testid="input-password"
                    id="input-password"
                    type="password"
                    value="aaaaaaaa"
                  />
                  <button
                    aria-disabled="false"
                    aria-label="Show password"
                    class="pf-c-button pf-m-control"
                    data-ouia-component-id="OUIA-Generated-Button-control-3"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 640 512"
                      width="1em"
                    >
                      <path
                        d="M320 400c-75.85 0-137.25-58.71-142.9-133.11L72.2 185.82c-13.79 17.3-26.48 35.59-36.72 55.59a32.35 32.35 0 0 0 0 29.19C89.71 376.41 197.07 448 320 448c26.91 0 52.87-4 77.89-10.46L346 397.39a144.13 144.13 0 0 1-26 2.61zm313.82 58.1l-110.55-85.44a331.25 331.25 0 0 0 81.25-102.07 32.35 32.35 0 0 0 0-29.19C550.29 135.59 442.93 64 320 64a308.15 308.15 0 0 0-147.32 37.7L45.46 3.37A16 16 0 0 0 23 6.18L3.37 31.45A16 16 0 0 0 6.18 53.9l588.36 454.73a16 16 0 0 0 22.46-2.81l19.64-25.27a16 16 0 0 0-2.82-22.45zm-183.72-142l-39.3-30.38A94.75 94.75 0 0 0 416 256a94.76 94.76 0 0 0-121.31-92.21A47.65 47.65 0 0 1 304 192a46.64 46.64 0 0 1-1.54 10l-73.61-56.89A142.31 142.31 0 0 1 320 112a143.92 143.92 0 0 1 144 144c0 21.63-5.29 41.79-13.9 60.11z"
                      />
                    </svg>
                  </button>
                  <ul>
                    <li>
                      <svg
                        aria-hidden="true"
                        data-testid="requirement-length-ok"
                        fill="#3e8635"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 512 512"
                        width="1em"
                      >
                        <path
                          d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                        />
                      </svg>
                      <span
                        class="password-requirement-text"
                      >
                        8 characters minimum
                      </span>
                    </li>
                    <li
                      class="pf-c-helper-text__item pf-m-dynamic pf-m-error"
                    >
                      <svg
                        aria-hidden="true"
                        data-testid="requirement-uppercase-failed"
                        fill="#c9190b"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 512 512"
                        width="1em"
                      >
                        <path
                          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                        />
                      </svg>
                      <span
                        class="password-requirement-text"
                      >
                        One uppercase character
                      </span>
                    </li>
                  </ul>
                  
                </div>
              </div>
            </div>
            <div
              class="pf-l-stack__item pasword-sublabel-item"
            >
              <h4
                class="pf-c-title pf-m-md"
                data-ouia-component-id="OUIA-Generated-Title-4"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe="true"
              >
                Confirm password
              </h4>
            </div>
            <div
              class="pf-l-stack__item pf-m-fill"
            >
              <div
                class="pf-c-form__group"
              >
                <div
                  class="pf-c-form__group-control"
                >
                  <input
                    aria-invalid="true"
                    class="pf-c-form-control password-item"
                    data-ouia-component-id="OUIA-Generated-TextInputBase-4"
                    data-ouia-component-type="PF4/TextInput"
                    data-ouia-safe="true"
                    data-testid="input-password-check"
                    id="input-password-check"
                    type="password"
                    value=""
                  />
                  <button
                    aria-disabled="false"
                    aria-label="Show password"
                    class="pf-c-button pf-m-control"
                    data-ouia-component-id="OUIA-Generated-Button-control-4"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 640 512"
                      width="1em"
                    >
                      <path
                        d="M320 400c-75.85 0-137.25-58.71-142.9-133.11L72.2 185.82c-13.79 17.3-26.48 35.59-36.72 55.59a32.35 32.35 0 0 0 0 29.19C89.71 376.41 197.07 448 320 448c26.91 0 52.87-4 77.89-10.46L346 397.39a144.13 144.13 0 0 1-26 2.61zm313.82 58.1l-110.55-85.44a331.25 331.25 0 0 0 81.25-102.07 32.35 32.35 0 0 0 0-29.19C550.29 135.59 442.93 64 320 64a308.15 308.15 0 0 0-147.32 37.7L45.46 3.37A16 16 0 0 0 23 6.18L3.37 31.45A16 16 0 0 0 6.18 53.9l588.36 454.73a16 16 0 0 0 22.46-2.81l19.64-25.27a16 16 0 0 0-2.82-22.45zm-183.72-142l-39.3-30.38A94.75 94.75 0 0 0 416 256a94.76 94.76 0 0 0-121.31-92.21A47.65 47.65 0 0 1 304 192a46.64 46.64 0 0 1-1.54 10l-73.61-56.89A142.31 142.31 0 0 1 320 112a143.92 143.92 0 0 1 144 144c0 21.63-5.29 41.79-13.9 60.11z"
                      />
                    </svg>
                  </button>
                  <div
                    class="helper-text-invalid"
                  >
                    <svg
                      aria-hidden="true"
                      fill="#c9190b"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                      />
                    </svg>
                    <span
                      data-testid="password__equality-validation"
                    >
                      Passwords does not match.
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="pf-l-stack__item content-three-rows__bottom"
        >
          <div
            class="wizard-footer"
          >
            <button
              aria-disabled="false"
              class="pf-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-2"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              data-testid="wizard-footer-button-back"
              type="button"
            >
              Go back
            </button>
            <button
              aria-disabled="true"
              class="pf-c-button pf-m-primary pf-m-disabled"
              data-ouia-component-id="OUIA-Generated-Button-primary-2"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              data-testid="wizard-footer-button-next"
              disabled=""
              type="button"
            >
              Continue
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PasswordPage can validate 8 small/upper letters password 1`] = `
<div>
  <div
    class="pf-c-background-image"
    style="--pf-c-background-image--BackgroundImage: url(/background.png); --pf-c-background-image--BackgroundImage-2x: url(/background.png); --pf-c-background-image--BackgroundImage--sm: url(/background.png); --pf-c-background-image--BackgroundImage--sm-2x: url(/background.png); --pf-c-background-image--BackgroundImage--lg: url(/background.png); --pf-c-background-image--Filter: url(#patternfly-background-image-filter-overlay2);"
  >
    <svg
      class="pf-c-background-image__filter"
      height="0"
      width="0"
      xmlns="http://www.w3.org/2000/svg"
    >
      <filter
        id="patternfly-background-image-filter-overlay2"
      >
        <fecolormatrix
          type="matrix"
          values="1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 1 0"
        />
        <fecomponenttransfer
          color-interpolation-filters="sRGB"
          result="duotone"
        >
          <fefuncr
            tableValues="0.086274509803922 0.43921568627451"
            type="table"
          />
          <fefuncg
            tableValues="0.086274509803922 0.43921568627451"
            type="table"
          />
          <fefuncb
            tableValues="0.086274509803922 0.43921568627451"
            type="table"
          />
          <fefunca
            tableValues="0 1"
            type="table"
          />
        </fecomponenttransfer>
      </filter>
    </svg>
  </div>
  <header
    class="pf-c-page__header page-header"
  >
    <div
      class="pf-c-page__header-brand"
    >
      <a
        class="pf-c-page__header-brand-link"
      >
        <img
          alt="Logo"
          src="RedHatLogo.svg"
        />
      </a>
    </div>
    <div
      class="pf-c-page__header-nav"
    >
      <div
        class="page-header-middle"
      >
        Edge cluster setup
      </div>
    </div>
    <div
      class="pf-c-page__header-tools"
    >
      <a
        aria-disabled="false"
        class="pf-c-button pf-m-tertiary"
        data-ouia-component-id="OUIA-Generated-Button-tertiary-3"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
      >
        Log out
      </a>
    </div>
  </header>
  <div
    class="page-container"
  >
    <div
      class="page-content"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item content-three-rows__top"
        >
          <ol
            class="pf-c-progress-stepper pf-m-center wizard-progress"
          >
            <li
              aria-label="Username step"
              class="pf-c-progress-stepper__step pf-m-success"
              id="username"
            >
              <div
                class="pf-c-progress-stepper__step-connector"
              >
                <span
                  class="pf-c-progress-stepper__step-icon"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="pf-c-progress-stepper__step-main"
              >
                <div
                  aria-labelledby="username username-title"
                  class="pf-c-progress-stepper__step-title"
                  id="username-title"
                >
                  Username
                </div>
              </div>
            </li>
            <li
              aria-label="Password step"
              class="pf-c-progress-stepper__step pf-m-info pf-m-current"
              id="password"
            >
              <div
                class="pf-c-progress-stepper__step-connector"
              >
                <span
                  class="pf-c-progress-stepper__step-icon"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M512.1,0 C229.7,0 0,229.8 0,512 C0,794.3 229.8,1024 512.1,1024 C794.4,1024 1024,794.3 1024,512 C1024,229.7 794.4,0 512.1,0 Z M512,896 C300.2,896 128,723.9 128,512 C128,300.3 300.2,128 512,128 C723.7,128 896,300.2 896,512 C896,723.8 723.7,896 512,896 Z M512,224 C671.1,224 800,352.9 800,512 C800,671.1 671.1,800 512,800 C352.9,800 224,671.1 224,512 C224,352.9 352.9,224 512,224"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="pf-c-progress-stepper__step-main"
              >
                <div
                  aria-labelledby="password password-title"
                  class="pf-c-progress-stepper__step-title"
                  id="password-title"
                >
                  Password
                </div>
              </div>
            </li>
            <li
              aria-label="API step"
              class="pf-c-progress-stepper__step pf-m-pending"
              id="apiaddr"
            >
              <div
                class="pf-c-progress-stepper__step-connector"
              >
                <span
                  class="pf-c-progress-stepper__step-icon"
                />
              </div>
              <div
                class="pf-c-progress-stepper__step-main"
              >
                <div
                  aria-labelledby="apiaddr apiaddr-title"
                  class="pf-c-progress-stepper__step-title"
                  id="apiaddr-title"
                >
                  API
                </div>
              </div>
            </li>
            <li
              aria-label="Ingress step"
              class="pf-c-progress-stepper__step pf-m-pending"
              id="ingressip"
            >
              <div
                class="pf-c-progress-stepper__step-connector"
              >
                <span
                  class="pf-c-progress-stepper__step-icon"
                />
              </div>
              <div
                class="pf-c-progress-stepper__step-main"
              >
                <div
                  aria-labelledby="ingressip ingressip-title"
                  class="pf-c-progress-stepper__step-title"
                  id="ingressip-title"
                >
                  Ingress
                </div>
              </div>
            </li>
            <li
              aria-label="Domain step"
              class="pf-c-progress-stepper__step pf-m-pending"
              id="domain"
            >
              <div
                class="pf-c-progress-stepper__step-connector"
              >
                <span
                  class="pf-c-progress-stepper__step-icon"
                />
              </div>
              <div
                class="pf-c-progress-stepper__step-main"
              >
                <div
                  aria-labelledby="domain domain-title"
                  class="pf-c-progress-stepper__step-title"
                  id="domain-title"
                >
                  Domain
                </div>
              </div>
            </li>
            <li
              aria-label="Download SSH key step"
              class="pf-c-progress-stepper__step pf-m-pending"
              id="sshkey"
            >
              <div
                class="pf-c-progress-stepper__step-connector"
              >
                <span
                  class="pf-c-progress-stepper__step-icon"
                />
              </div>
              <div
                class="pf-c-progress-stepper__step-main"
              >
                <div
                  aria-labelledby="sshkey sshkey-title"
                  class="pf-c-progress-stepper__step-title"
                  id="sshkey-title"
                >
                  SSH
                </div>
              </div>
            </li>
          </ol>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill content-three-rows__middle"
        >
          <div
            class="pf-l-stack pf-m-gutter wizard-content"
          >
            <div
              class="pf-l-stack__item"
            >
              <h1
                class="pf-c-title pf-m-2xl"
                data-ouia-component-id="OUIA-Generated-Title-5"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe="true"
              >
                Choose a password 
                <span
                  class="required-badge"
                >
                  *
                </span>
              </h1>
            </div>
            <div
              class="pf-l-stack__item wizard-sublabel"
            >
              Keep your edge cluster account safe and secure.
            </div>
            <div
              class="pf-l-stack__item"
            >
              <div
                class="pf-c-form__group"
              >
                <div
                  class="pf-c-form__group-control"
                >
                  <input
                    aria-invalid="false"
                    class="pf-c-form-control password-item"
                    data-ouia-component-id="OUIA-Generated-TextInputBase-5"
                    data-ouia-component-type="PF4/TextInput"
                    data-ouia-safe="true"
                    data-testid="input-password"
                    id="input-password"
                    type="password"
                    value="aaaaaaaA"
                  />
                  <button
                    aria-disabled="false"
                    aria-label="Show password"
                    class="pf-c-button pf-m-control"
                    data-ouia-component-id="OUIA-Generated-Button-control-5"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 640 512"
                      width="1em"
                    >
                      <path
                        d="M320 400c-75.85 0-137.25-58.71-142.9-133.11L72.2 185.82c-13.79 17.3-26.48 35.59-36.72 55.59a32.35 32.35 0 0 0 0 29.19C89.71 376.41 197.07 448 320 448c26.91 0 52.87-4 77.89-10.46L346 397.39a144.13 144.13 0 0 1-26 2.61zm313.82 58.1l-110.55-85.44a331.25 331.25 0 0 0 81.25-102.07 32.35 32.35 0 0 0 0-29.19C550.29 135.59 442.93 64 320 64a308.15 308.15 0 0 0-147.32 37.7L45.46 3.37A16 16 0 0 0 23 6.18L3.37 31.45A16 16 0 0 0 6.18 53.9l588.36 454.73a16 16 0 0 0 22.46-2.81l19.64-25.27a16 16 0 0 0-2.82-22.45zm-183.72-142l-39.3-30.38A94.75 94.75 0 0 0 416 256a94.76 94.76 0 0 0-121.31-92.21A47.65 47.65 0 0 1 304 192a46.64 46.64 0 0 1-1.54 10l-73.61-56.89A142.31 142.31 0 0 1 320 112a143.92 143.92 0 0 1 144 144c0 21.63-5.29 41.79-13.9 60.11z"
                      />
                    </svg>
                  </button>
                  <ul>
                    <li>
                      <svg
                        aria-hidden="true"
                        data-testid="requirement-length-ok"
                        fill="#3e8635"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 512 512"
                        width="1em"
                      >
                        <path
                          d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                        />
                      </svg>
                      <span
                        class="password-requirement-text"
                      >
                        8 characters minimum
                      </span>
                    </li>
                    <li
                      class="pf-c-helper-text__item pf-m-dynamic pf-m-error"
                    >
                      <svg
                        aria-hidden="true"
                        data-testid="requirement-uppercase-ok"
                        fill="#3e8635"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 512 512"
                        width="1em"
                      >
                        <path
                          d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                        />
                      </svg>
                      <span
                        class="password-requirement-text"
                      >
                        One uppercase character
                      </span>
                    </li>
                  </ul>
                  
                </div>
              </div>
            </div>
            <div
              class="pf-l-stack__item pasword-sublabel-item"
            >
              <h4
                class="pf-c-title pf-m-md"
                data-ouia-component-id="OUIA-Generated-Title-6"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe="true"
              >
                Confirm password
              </h4>
            </div>
            <div
              class="pf-l-stack__item pf-m-fill"
            >
              <div
                class="pf-c-form__group"
              >
                <div
                  class="pf-c-form__group-control"
                >
                  <input
                    aria-invalid="false"
                    class="pf-c-form-control password-item"
                    data-ouia-component-id="OUIA-Generated-TextInputBase-6"
                    data-ouia-component-type="PF4/TextInput"
                    data-ouia-safe="true"
                    data-testid="input-password-check"
                    id="input-password-check"
                    type="password"
                    value="aaaaaaaA"
                  />
                  <button
                    aria-disabled="false"
                    aria-label="Show password"
                    class="pf-c-button pf-m-control"
                    data-ouia-component-id="OUIA-Generated-Button-control-6"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 640 512"
                      width="1em"
                    >
                      <path
                        d="M320 400c-75.85 0-137.25-58.71-142.9-133.11L72.2 185.82c-13.79 17.3-26.48 35.59-36.72 55.59a32.35 32.35 0 0 0 0 29.19C89.71 376.41 197.07 448 320 448c26.91 0 52.87-4 77.89-10.46L346 397.39a144.13 144.13 0 0 1-26 2.61zm313.82 58.1l-110.55-85.44a331.25 331.25 0 0 0 81.25-102.07 32.35 32.35 0 0 0 0-29.19C550.29 135.59 442.93 64 320 64a308.15 308.15 0 0 0-147.32 37.7L45.46 3.37A16 16 0 0 0 23 6.18L3.37 31.45A16 16 0 0 0 6.18 53.9l588.36 454.73a16 16 0 0 0 22.46-2.81l19.64-25.27a16 16 0 0 0-2.82-22.45zm-183.72-142l-39.3-30.38A94.75 94.75 0 0 0 416 256a94.76 94.76 0 0 0-121.31-92.21A47.65 47.65 0 0 1 304 192a46.64 46.64 0 0 1-1.54 10l-73.61-56.89A142.31 142.31 0 0 1 320 112a143.92 143.92 0 0 1 144 144c0 21.63-5.29 41.79-13.9 60.11z"
                      />
                    </svg>
                  </button>
                  
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="pf-l-stack__item content-three-rows__bottom"
        >
          <div
            class="wizard-footer"
          >
            <button
              aria-disabled="false"
              class="pf-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-3"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              data-testid="wizard-footer-button-back"
              type="button"
            >
              Go back
            </button>
            <button
              aria-disabled="false"
              class="pf-c-button pf-m-primary"
              data-ouia-component-id="OUIA-Generated-Button-primary-3"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              data-testid="wizard-footer-button-next"
              type="button"
            >
              Continue
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
